deploy-trace-grapher/bases/trace-grapher/jupyter-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jupyter

spec:
  selector:
    matchLabels:
      app: jupyter
  serviceName: jupyter
  replicas: 1
  template:
    metadata:
      labels:
        app: jupyter
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: jupyter
        image: jupyter/all-spark-notebook
        ports:
        - name: http-web
          containerPort: 8888
        command: [
          "start-notebook.sh",
          "--NotebookApp.allow_origin=\"*\"",
          "--NotebookApp.base_url=/jupyter",
        ]
        volumeMounts:
        - name: jupyter-data
          mountPath: /home/jovyan/work
        readinessProbe:
          tcpSocket:
            port: 8888
          initialDelaySeconds: 30
          periodSeconds: 3
        livenessProbe:
          initialDelaySeconds: 60
          tcpSocket:
            port: 8888
        resources:
          requests:
            cpu: "250m"
            memory: "1Gi"
          limits:
            cpu: "1"
            memory: "2Gi"
  volumeClaimTemplates:
  - metadata:
      name: jupyter-data
    spec:
      accessModes:
        - ReadWriteOnce
      storageClassName: hostpath
      resources:
        requests:
          storage: 1Gi
