deploy-trace-grapher/bases/trace-grapher/virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kafka
spec:
  hosts:
  - "*"
  gateways:
  - tracegrapher-gateway
  http:
  - match:
    - uri:
        prefix: /kafka-connect
    rewrite:
      uri: /
    route:
    - destination:
        host: tracing-cluster-connect-ui
        port:
          number: 8000
  - match:
    - uri:
        regex: /api/kafka-connect-([0-9]+)(/.*)
    route:
    - destination:
        host: tracing-cluster-connect-ui
        port:
          number: 8000

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: neo4j
spec:
  hosts:
  - "*"
  gateways:
  - tracegrapher-gateway
  http:
  - match:
    - uri:
        prefix: /browser
    - uri:
        prefix: /db
    route:
    - destination:
        host: neo4j
        port:
          number: 7474
  
  tcp:
  - match:
    - port: 7687
    route:
    - destination:
        host: neo4j
        port:
          number: 7687

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: almond
spec:
  hosts:
  - "*"
  gateways:
  - tracegrapher-gateway
  http:
  - match:
    - uri:
        prefix: /jupyter/
    route:
    - destination:
        host: almond
        port:
          number: 8888
